--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "lib"
   ],
   "scripts": {
+    "jscs": "jscs benchmarks/*.js lib/*.js lib/**/*.js lib/**/**/*.js test/index.js",
+    "jshint": "jscs benchmarks/*.js lib/*.js lib/**/*.js lib/**/**/*.js test/index.js",
     "lint": "eslint lib test",
     "lint:fix": "npm run lint -- --fix",
-    "unit": "istanbul test _mocha --reporter=spec test/index.js",
+    "unit": "npm run unit:base && npm run unit:precomputed",
+    "unit:base": "istanbul test _mocha --reporter=spec test/index.js",
+    "unit:precomputed": "USE_PRECOMPUTED=y istanbul test _mocha --reporter=spec test/index.js",
     "test": "npm run lint && npm run unit",
     "version": "grunt dist && git add dist/"
   },
