--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "uglify-js": "^2.4.13"
   },
   "dependencies": {
-    "bn.js": "^2.0.0",
-    "brorand": "^1.0.1",
-    "hash.js": "^1.0.0",
-    "inherits": "^2.0.1"
+    "bn.js": "2.0.4",
+    "brorand": "1.1.0",
+    "hash.js": "1.1.5",
+    "inherits": "2.0.1"
   }
 }
