--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/elliptic",
-  "version": "3.0.3",
+  "version": "3.0.3-dcr.0",
   "description": "EC cryptography",
   "main": "lib/elliptic.js",
   "scripts": {
