--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exodus/elliptic",
-  "version": "6.6.1",
+  "version": "6.6.1-precomputed",
   "description": "EC cryptography",
   "main": "lib/elliptic.js",
   "files": [
